change the image link

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 		<table>
 			<tr>
 				<td>
-					<h1>Programing Lover</h1>		
+					<h1>Programing Lover</h1>
 					<p>Programing, Programing, Programing</p>
 					<p>Programing, Programing, Programing</p>
 					<p>Programing, Programing, Programing</p>
-					<img src="images/image.png">
-				</td>	
-			</tr>		
-		</table>	
+					<img src="https://fotos.subefotos.com/1d69f9048ae4ea9733f5b1419c49617co.png">
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
